force-app/main/default/objects/One_JN_Input__e/One_JN_Input__e.object-meta.xml
<CustomObject>
    <description>Listens for external requests</description>
    <label>One JN Input</label>
    <pluralLabel>One JN Inputs</pluralLabel>
</CustomObject>