force-app/main/default/objects/One_JN_Input__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Payload for event</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>